apps/docker-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: registry
  type: ClusterIP
